New structure including the AP-requests with ApRssiRunnable

--- a/javaEE/wifi_positioning/src/main/resources/conf/server.properties
+++ b/javaEE/wifi_positioning/src/main/resources/conf/server.properties
@@ -1,10 +1,18 @@
+# Overall properties
 mac.address.byte.length=12
 position.byte.length=5
 rssi.byte.length=5
 
-calibrate.port=1111
-calibrate.packet.offset=10
+# AP properties
+ap.port=1110
+ap.ips=192.168.1.11;192.168.1.12;192.168.1.13
+ap.response.offset=10
 
+# Calibrate properties
+calibrate.port=1111
+calibrate.request.offset=10
+
+# Locate properties
 locate.port=1112
-locate.packet.offset=10
+locate.request.offset=10
 locate.rssi.epsilon=100
