--- a/javaEE/wifi_positioning/src/main/resources/conf/server.properties
+++ b/javaEE/wifi_positioning/src/main/resources/conf/server.properties
@@ -1,10 +1,10 @@
 # AP properties
 ap.port=3000
-ap.ips=192.168.2.11;
+ap.ips=192.168.2.1;
 
 # Calibrate properties
 calibrate.port=3001
 
 # Locate properties
 locate.port=3002
-locate.rssi.epsilon=100
+locate.rssi.epsilon=100.0f
