--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ android/.gradle
 android/local.properties
 android/.idea/workspace.xml
 android/.idea/libraries
+android/build
 .DS_Store
-/build
+
 pom.properties
 javaEE/wifi_positioning/log
 .classpath
